--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             font-weight: bold;
             color: #333;
             margin-bottom: 20px;
+            margin-top: 100px;
         }
 
         .btn {
@@ -40,7 +41,7 @@
             border-radius: 10px;
             cursor: pointer;
             transition: background-color 0.3s ease;
-            margin: 10px;
+            margin: 10px 10px 120px 10px;
         }
 
         .btn:hover {
