--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
             font-size: 240px;
             font-weight: bold;
             color: #333;
-            margin-bottom: 20px;
-            margin-top: 100px;
+            margin-bottom: 30px;
         }
 
         .btn {
@@ -36,31 +35,47 @@
             font-size: 22px;
             font-weight: bold;
             color: white;
-            background-color: #007BFF;
             border: none;
             border-radius: 10px;
             cursor: pointer;
             transition: background-color 0.3s ease;
-            margin: 10px 10px 120px 10px;
+            margin: 15px 0;
         }
 
-        .btn:hover {
+        .btn-generate {
+            background-color: #007BFF;
+        }
+
+        .btn-generate:hover {
             background-color: #0056b3;
         }
 
-        .btn:active {
+        .btn-generate:active {
             background-color: #00408d;
+        }
+
+        .btn-hint {
+            background-color: #28a745;
+        }
+
+        .btn-hint:hover {
+            background-color: #218838;
+        }
+
+        .btn-hint:active {
+            background-color: #1e7e34;
         }
 
         #hint {
             font-size: 28px;
             font-weight: bold;
             color: #555;
-            margin-top: 20px;
+            margin-bottom: 10px;
+            /* Отступ вниз */
             opacity: 0;
             transition: opacity 0.3s ease;
             visibility: hidden;
-            height: 30px;
+            min-height: 30px;
             /* Фиксированная высота для предотвращения сдвига */
         }
 
@@ -76,7 +91,7 @@
 
             #hint {
                 font-size: 24px;
-                height: 25px;
+                min-height: 25px;
             }
         }
     </style>
@@ -85,18 +100,19 @@
 <body>
 
     <div id="number">—</div>
-    <button class="btn" onclick="generateRandomNumber()">Сгенерировать</button>
-    <button class="btn" onclick="showHint()">Подсказка</button>
+    <button class="btn btn-generate" onclick="generateRandomNumber()">Сгенерировать</button>
+
     <div id="hint"></div>
+    <button class="btn btn-hint" onclick="showHint()">Подсказка</button>
 
     <script>
         const numbersInPortuguese = [
             "zero", "um", "dois", "três", "quatro", "cinco", "seis", "sete", "oito", "nove",
             "dez", "onze", "doze", "treze", "catorze", "quinze", "dezasseis", "dezassete", "dezoito", "dezanove",
             "vinte", "vinte e um", "vinte e dois", "vinte e três", "vinte e quatro", "vinte e cinco", "vinte e seis", "vinte e sete", "vinte e oito", "vinte e nove",
-            "trinta", "trinta e um", "trinta e dois", "trinta и três", "trinta e quatro", "trinta e cinco", "trinta e seis", "trinta e sete", "trinta e oito", "trinta e nove",
+            "trinta", "trinta e um", "trinta e dois", "trinta e três", "trinta e quatro", "trinta e cinco", "trinta e seis", "trinta e sete", "trinta e oito", "trinta e nove",
             "quarenta", "quarenta e um", "quarenta e dois", "quarenta e três", "quarenta e quatro", "quarenta e cinco", "quarenta e seis", "quarenta e sete", "quarenta e oito", "quarenta e nove",
-            "cinquenta", "cinquenta e um", "cinquenta e dois", "cinquenta e três", "cinquenta e quatro", "cinquenta e cinco", "cinquenta e шесть", "cinquenta e семь", "cinquenta e восемь", "cinquenta e девять"
+            "cinquenta", "cinquenta e um", "cinquenta e dois", "cinquenta e três", "cinquenta e quatro", "cinquenta e cinco", "cinquenta e seis", "cinquenta e sete", "cinquenta e oito", "cinquenta e nove"
         ];
 
         let currentNumber = null;
